Add changes to background thread